tests/algorithms/x/Java/web_programming/instagram_crawler.error
compile: exit status 1
/tmp/TestJavaTranspiler_Algorithms_Golden1066_instagram_crawler3736645488/001/Main.java:62: error: incompatible types: String cannot be converted to int
            value = value * 10 + (s.substring(i_1, i_1+1));
                               ^
1 error
